<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/username"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/createButton"
        android:hint="@string/login"/>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/Signup"
        android:layout_width ="wrap_content"
        android:text="@string/signup_prompt"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:background="@color/createButton"
        />
</LinearLayout>

